--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -2,6 +2,6 @@
 ##AM_CPPFLAGS = -I$(top_srcdir)/include -O3 -fno-tree-pre -ftree-vectorize -fopt-info -march=native -mfpmath=sse -fopt-info-vec-optimized
 AM_CPPFLAGS = -I$(top_srcdir)/include
 AM_LDFLAGS = -llapack -lblas
-bin_PROGRAMS = promising blah
+bin_PROGRAMS = promising reglaplacian
 promising_SOURCES = coreroutines.cpp CompleteGraphScorer.cpp PValueModuleScorer.cpp main.cpp FastScorer.cpp
-blah_SOURCES = graph_kernels.cpp
+reglaplacian_SOURCES = graph_kernels.cpp
