--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,5 @@
-
 ##AM_CPPFLAGS = -I$(top_srcdir)/include -O3 -fno-tree-pre -ftree-vectorize -fopt-info -march=native -mfpmath=sse -fopt-info-vec-optimized
-AM_CPPFLAGS = -I$(top_srcdir)/include
+AM_CPPFLAGS = -I$(top_srcdir)/include -std=c++0x
 AM_LDFLAGS = -llapack -lblas
 bin_PROGRAMS = promising reglaplacian
 promising_SOURCES = coreroutines.cpp CompleteGraphScorer.cpp PValueModuleScorer.cpp main.cpp FastScorer.cpp
